--- a/templates/teleport.service.j2
+++ b/templates/teleport.service.j2
@@ -8,6 +8,7 @@ Restart=on-failure
 ExecStart=/usr/local/bin/teleport start --config={{ teleport_config_path }} {{ teleport_opts | default('') }}
 ExecReload=/bin/kill -HUP $MAINPID
 PIDFile=/var/run/teleport.pid
+KillMode=process
 
 [Install]
 WantedBy=multi-user.target
