--- a/templates/teleport.yaml.j2
+++ b/templates/teleport.yaml.j2
@@ -20,9 +20,6 @@ teleport:
   storage:
     type: {{ teleport_storage_type }}
   data_dir: {{ teleport_data_dir }}
-{% if teleport_public_addr %}
-public_addr: "{{ teleport_public_addr }}"
-{% endif %}
 auth_service:
 {% if teleport_auth_enabled | default(false) %}
   enabled: "yes"
@@ -38,6 +35,9 @@ auth_service:
 {% endif %}
   oidc_connectors: []
   cluster_name: {{ teleport_auth_cluster_name }}
+  {% if teleport_auth_public_addr %}
+  public_addr: "{{ teleport_auth_public_addr }}"
+  {% endif %}
 {% if teleport_auth_trusted_clusters|length > 0 %}
   trusted_clusters:
 {% for cluster_ca in teleport_auth_trusted_clusters %}
