--- a/templates/teleport.yaml.j2
+++ b/templates/teleport.yaml.j2
@@ -19,14 +19,22 @@ teleport:
     severity: {{ teleport_log_level }}
   storage:
     type: {{ teleport_storage_type }}
+{% if teleport_audit_events_uri | default(false) %}
+    audit_events_uri: "{{ teleport_audit_events_uri }}"
+{% endif %}
+{% if teleport_audit_sessions_uri | default(false) %}
+    audit_sessions_uri: "{{ teleport_audit_sessions_uri }}"
+{% endif %}
   data_dir: {{ teleport_data_dir }}
 auth_service:
 {% if teleport_auth_enabled | default(false) %}
   enabled: "yes"
   listen_addr: "{{ teleport_auth_listen_address }}"
-{% if teleport_u2f_app_id | default(false) %}
   authentication:
     type: local
+{% if teleport_second_factor_otp | default(false) %}
+    second_factor: otp
+{% elif teleport_u2f_app_id | default(false) %}
     second_factor: u2f
     u2f:
       app_id: "{{ teleport_u2f_app_id }}"
@@ -35,9 +43,9 @@ auth_service:
 {% endif %}
   oidc_connectors: []
   cluster_name: {{ teleport_auth_cluster_name }}
-  {% if teleport_auth_public_addr %}
+{% if teleport_auth_public_addr %}
   public_addr: "{{ teleport_auth_public_addr }}"
-  {% endif %}
+{% endif %}
 {% if teleport_auth_trusted_clusters|length > 0 %}
   trusted_clusters:
 {% for cluster_ca in teleport_auth_trusted_clusters %}
@@ -72,9 +80,26 @@ proxy_service:
   listen_addr: "{{ teleport_proxy_listen_address }}"
   web_listen_addr: "{{ teleport_proxy_web_listen_address }}"
   tunnel_listen_addr: "{{ teleport_proxy_tunnel_listen_address }}"
-{% if teleport_proxy_https_key_file %}
-  https_key_file: {{ teleport_proxy_https_key_file }}
-  https_cert_file: {{ teleport_proxy_https_cert_file }}
+{% if teleport_public_addr %}
+  public_addr: "{{ teleport_public_addr }}"
+{% endif %}
+{% if teleport_ssh_public_addr %}
+  ssh_public_addr: "{{ teleport_ssh_public_addr }}"
+{% endif %}
+{% if teleport_tunnel_public_addr %}
+  tunnel_public_addr: "{{ teleport_tunnel_public_addr }}"
+{% endif %}
+{% if teleport_proxy_https_key_file and teleport_proxy_https_cert_file %}
+  https_keypairs:
+    - key_file: {{ teleport_proxy_https_key_file }}
+      cert_file: {{ teleport_proxy_https_cert_file }}
+{% else %}
+  https_keypairs: []
+{% endif %}
+{% if teleport_acme_email %}
+  acme:
+    enabled: "yes"
+    email: "{{ teleport_acme_email }}"
 {% endif %}
 {% else %}
   enabled: "no"
