--- a/templates/teleport.yaml.j2
+++ b/templates/teleport.yaml.j2
@@ -22,8 +22,14 @@ teleport:
     severity: {{ teleport_log_level }}
   storage:
     type: {{ teleport_storage_type }}
+{% if teleport_storage_region | default(false) %}
+    region: "{{ teleport_storage_region }}"
+{% endif %}
 {% if teleport_audit_events_uri | default(false) %}
     audit_events_uri: "{{ teleport_audit_events_uri }}"
+{% endif %}
+{% if teleport_storage_table_name | default(false) %}
+    table_name: "{{ teleport_storage_table_name }}"
 {% endif %}
 {% if teleport_audit_sessions_uri | default(false) %}
     audit_sessions_uri: "{{ teleport_audit_sessions_uri }}"
