Create ipset teleport_proxies if not exists

--- a/templates/update_teleport_proxies_ipset.sh.j2
+++ b/templates/update_teleport_proxies_ipset.sh.j2
@@ -5,6 +5,8 @@ DIG=/usr/bin/dig
 
 set -eu
 
+$IPSET list teleport_proxies &>/dev/null || $IPSET create teleport_proxies hash:ip
+
 $IPSET list teleport_proxies_temp &>/dev/null || $IPSET create teleport_proxies_temp hash:ip
 
 $IPSET flush teleport_proxies_temp
