--- a/templates/teleport.yaml.j2
+++ b/templates/teleport.yaml.j2
@@ -117,4 +117,6 @@ proxy_service:
 {% else %}
   enabled: "no"
 {% endif %}
-
+{% if teleport_configuration_applications is defined %}
+{{ teleport_configuration_applications | to_nice_yaml(indent=2) }}
+{% endif %}
