--- a/templates/teleport.service.j2
+++ b/templates/teleport.service.j2
@@ -7,7 +7,7 @@ Type=simple
 Restart=on-failure
 ExecStart=/usr/local/bin/teleport start --config={{ teleport_config_path }} {{ teleport_opts | default('') }}
 ExecReload=/bin/kill -HUP $MAINPID
-PIDFile=/var/run/teleport.pid
+PIDFile={{ teleport_pidfile }}
 KillMode=process
 User=root
 
